syntax = "proto3";

option csharp_namespace = "GrpcTest.Docker";

package gibberish;

import "google/api/annotations.proto";

service GibberishCollection {
  rpc Get (GibberishRequest) returns (GibberishReply) {
    option (google.api.http) = {
      get: "/v1/gibberish/{count}"
    };
  }
}

message GibberishRequest {
  int32 count = 1;
}

message GibberishReply {
  int32 count = 1;
  repeated string collection = 2;
}

